# vde_ar

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: download_results_20250223_163523.json  filtered_pdfs.json  google_queries.json  pdf_links.json  seed_topics.json  seed_topics.txt
notebooks/: 00_distill_ar_m2v_model.ipynb  01_generate_google_queries.ipynb  02_serp_api.ipynb  03_extract_links.ipynb  04_deduplicate_files.ipynb  05_detect_language.ipynb  06_filter_pdfs.ipynb
scripts/: download_model.py  download_pdfs.py  download_results_20250208_023918.json
