[project]
name = "vde-ar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.7.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "model2vec[distill]>=0.3.9",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "serpapi>=0.1.5",
    "torch",
    "tqdm>=4.67.1",
    "wordllama>=0.3.9",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.3.1%2Bcpu-cp312-cp312-linux_x86_64.whl" }
